# songrec-android

./: README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
.github/workflows/: build-native-rust.yml
app/: build.gradle.kts
app/src/main/java/io/github/tiefensuche/: SongRec.kt
common/: build.gradle.kts
common/src/main/kotlin/io/github/tiefensuche/: SongRec.kt  SongRecLibLoader.kt
desktop/: build.gradle.kts
desktop/src/main/resources/native/macos-arm64/: libsongrec.dylib
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
songrec/: Cargo.toml
songrec/src/: lib.rs
songrec/src/fingerprinting/: algorithm.rs  decode.rs  signature_format.rs
